# nccu-course-mcp

./: .gitignore  AGENTS.md  LICENSE  QUERY_GUIDE.md  README.md  README.zh-TW.md  architecture.md  pyproject.toml  spec.json
src/nccu_course_mcp/: build_dept_codes.py  client.py  dept_codes.json  server.py  test_server.py
