[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nccu-course-mcp"
version = "0.1.0"
description = "MCP server for querying NCCU course listings (qrysub.nccu.edu.tw)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["mcp>=1.2.0", "requests>=2.31.0"]

[project.scripts]
nccu-course-mcp = "nccu_course_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nccu_course_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/nccu_course_mcp/dept_codes.json" = "nccu_course_mcp/dept_codes.json"
